# python-project-50

./: Makefile  README.md  pyproject.toml
.github/workflows/: gendiff-check.yml
gendiff/: __init__.py  cli.py  code.py  data_reader.py  diff_tree.py  file_parser.py  generate_diff.py  logic.py  plain.py  stylish.py
gendiff/formatters/: basic_stylish.py  choose_formatter.py  json.py  plain.py  stylish.py  stylish6.py  stylish7.py
gendiff/scripts/: gendiff.py
gendiff/tests/: test_gendiff.py
tests/: test_argparser.py  test_gendiff.py  test_json.py  test_logic.py  test_yaml.py
tests/fixtures/: file1_nested.json
