[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Gendiff - Compares two files and shows the difference in three formats"
authors = ["Ivan Noev <<ivnoyev@yandex.ru>>"]
readme = "README.md"
packages = [{include = "gendiff"}]

[tool.poetry.dependencies]
python = "^3.8.1,<4.0"
pytest-cov = "^4.0.0"
pyyaml = "^6.0"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
